crates/toml_edit/tests/snapshots/invalid/string/bad-hex-esc-05.stderr
TOML parse error at line 1, column 19
  |
1 | bad-hex-esc-5 = "\x 50"
  |                   ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
